Fix spacings in panel container

--- a/packages/common/src/Styles/global.scss
+++ b/packages/common/src/Styles/global.scss
@@ -125,7 +125,7 @@
   @extend .fontElementMap;
   position: absolute;
   display: flex;
-  padding: 10px;
+  padding: 12px 24px;
   background: $primary-color-light;
   color: $secondary-text-color;
   border-radius: $toolbarBorderRadius;
